--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
   <div class="links">
   </div>
   <div class="link">
-      <a href="https://www.instagram.com/xurrka1" target="_blank" ><i class="fab fa-instagram"></i>instagram</a>
+      <a href="https://www.instagram.com/xurrrka" target="_blank" ><i class="fab fa-instagram"></i>instagram</a>
     </div>
     
     <div class="link">
